--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" class="has-background-white">
+<html lang="en">
 <head> 
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,12 +13,11 @@
 <body class="has-background-white">
   <nav class="box level has-background-primary">
     <div class="title is-4 level-left">Timer: <span id="quiz-timer"></span></div>
-    <div class="title is-4 level-right">High Score: <span id="highscore-name-input"></span></div>
   </nav>
 
-  <section id="quizBox" class="box has-background-primary">
+  <section id="quizBox" class="column has-background-success">
     <div>
-      <h2 class="title is-1">Coding Quiz</h2>
+      <h2 class="title is-1">Coding Quiz!</h2>
       <button class="button is-danger is-large" id="startQuizBtn">Start!</button>
       <p>
         Welcome to the Coding Quiz!
@@ -29,6 +28,11 @@
       </p>    
     </div>
   </section>
+
+  <section id="highScoreBox" class="column has-background-link">
+    <div class="title is-4 level-left">High Score: <span id="highscore-name-input"></span></div>
+  </section>
+  
   
   <script src="./assets/js/index.js"></script>
 </body>
