updated html and added variables to grab elements by ID

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <div class="title is-4 level-left">Timer: <span id="quiz-timer"></span></div>
   </nav>
 
-  <section id="quizBox" class="column has-background-success">
+  <section id="quiz-box" class="column has-background-success bulma-block-mixin">
     <div>
       <h2 class="title is-1">Coding Quiz!</h2>
       <button class="button is-danger is-large" id="startQuizBtn">Start!</button>
       <p>
         Welcome to the Coding Quiz!
         
-        Answer all of the Javascript questions in the alloted amount of time for a chance
+        Answer all of the Javascript questions in the allotted amount of time for a chance
         at a new High Score! If you answer the questions incorrectly, then your score and time
         will be reduced by 10. Good Luck!
       </p>    
