cleaned up index.js and fixed html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body class="has-background-white">
   <nav class="box level has-background-primary">
-    <div class="title is-4 level-left">Timer: <span id="quiz-timer"></span></div>
+    <div class="title is-3 level-left">Timer: <span id="quiz-timer"></span></div>
   </nav>
 
   <section id="quiz-box" class="column has-background-success bulma-block-mixin">
@@ -29,8 +29,10 @@
     </div>
   </section>
 
-  <section id="highScoreBox" class="column has-background-link">
-    <div class="title is-4 level-left">High Score: <span id="highscore-name-input"></span></div>
+  <div class="block level has-background-white"></div>
+  
+  <section id="highScoreBox" class="block has-background-link">
+    <div class="title is-3 level-left">High Score: <span id="highscore-name-input"></span></div>
   </section>
   
   
